pridanie linku do reportu

--- a/text/lampasova-project.tex
+++ b/text/lampasova-project.tex
@@ -48,7 +48,7 @@ TODO
 
 \indent\par Idea učenia algoritmu čisto na základe hodnotenia jeho správnania pozitívnym/negatívnym rewardom a skutočnosť, že sa tak naozaj dobre vedia naučiť napríklad hrať hry\footnote{\url{https://arxiv.org/pdf/1712.01815.pdf}} alebo nájsť vhodnú stratégiu pre obchodovanie s akciami\footnote{\url{https://arxiv.org/abs/1811.07522}} mi prišla veľmi fascinujúca. Tieto algoritmy nám taktiež poskytujú nové možnosti, ako sa naučiť niečo sami o sebe, napríklad akú výhodu majú predchádzajúce vedomosti pri hraní videohier\footnote{\url{https://www.youtube.com/watch?v=Ol0-c9OE3VQ}, prípadne samotný článok: \url{https://arxiv.org/pdf/1802.10217.pdf}.} alebo možnosť zistiť aké reward funkcie nás mohli viesť k naučeniu sa rôznych úkonov\footnote{\url{https://ai.stanford.edu/~ang/papers/icml00-irl.pdf}}. Bohužiaľ som nemala čas ani nápad na podobne dobrý výskum, ale chcela som sa aspoň poriadne naučiť základy reinforcement learningu a to spísaním teoretického úvodu a experimentovaním s rôznymi konceptami a algoritmami v tejto oblasti.
 
-Konkrétne som sa rozhodla naimplementovať\footnote{Nie nutne from scratch. Teda aspoň pochopiť a použiť už existujúce implementácie algoritmov.} \textit{Value iteration, Policy iteration, Q-learning, SARSA}-u \textit{a Deep Q-learning} na natrénovanie agentov majúcich dobrý performance pri hraní jednoduchých \textit{OpenAI Gym} hier -- \textit{FrozenLake} a \textit{CartPole} a pohrať sa s tým, ako tieto algoritmy závisia od rôznych parametrov. Použité algoritmy sú dostupné tu: TODO.
+Konkrétne som sa rozhodla naimplementovať\footnote{Nie nutne from scratch. Teda aspoň pochopiť a použiť už existujúce implementácie algoritmov.} \textit{Value iteration, Policy iteration, Q-learning, SARSA}-u \textit{a Deep Q-learning} na natrénovanie agentov majúcich dobrý performance pri hraní jednoduchých \textit{OpenAI Gym} hier -- \textit{FrozenLake} a \textit{CartPole} a pohrať sa s tým, ako tieto algoritmy závisia od rôznych parametrov. Použité algoritmy sú dostupné tu: \url{https://github.com/dendaxD/machine-learning-project}.
 
 
 \subsubsection*{FrozenLake}
